finalised the html document

--- a/index.html
+++ b/index.html
@@ -14,29 +14,209 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <!-- header -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <a class="navbar-brand" href="#">William Woodburn</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item active ">
+                    <a class="nav-link" href="https://github.com/willwoodburn1" target="_blank">GitHub
+                    </a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link"
+                        href="https://docs.google.com/document/d/1rrSigmS1L3b9DjIdhhbyNW-8J9H3i7aVheaojtA96hM/edit?usp=sharing"
+                        target="_blank">Resume
+                    </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://www.linkedin.com/in/will-woodburn-bb656b1ab"
+                        target="_blank">Linkedin
+                    </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
+
             </ul>
         </div>
     </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4 leftContent">
+
+                <div class="row">
+                    <div id="leftTopContainer" class="col box">
+                        <aside id="leftTopContent">
+                            <h3> <strong> <u> Designed Applications </u> </strong> </h3>
+
+                            <!-- DropDown Link Bandear -->
+                            <div class="dropdown">
+                                <a class="nav-link dropdown-toggle" id="projectOneDropdownLink" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Group Project 1: Bandear
+                                </a>
+
+
+                                <div class="dropdown-menu" id="projectOneLink" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item"
+                                        href="https://chrisjmckeown.github.io/BandEaR_Discover_live_artists/"
+                                        target="_blank">
+                                        Deployed
+                                        Version</a>
+                                    <a class="dropdown-item"
+                                        href="https://github.com/chrisjmckeown/BandEaR_Discover_live_artists"
+                                        target="_blank">
+                                        GitHub
+                                        Repo</a>
+                                </div>
+                            </div>
+
+
+                            <!-- Dropdown Link Weather Forecast -->
+                            <div class="dropdown">
+                                <a class="nav-link dropdown-toggle" id="assignmentOneDropdownLink" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Assignment: API Weather Forecast
+                                </a>
+
+                                <div class="dropdown-menu" id="assignmentOneLink"
+                                    aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="https://willwoodburn1.github.io/Week6-Homework"
+                                        target="_blank">Deployed
+                                        Version</a>
+                                    <a class="dropdown-item" href="https://github.com/willwoodburn1/Week6-Homework"
+                                        target="_blank">
+                                        GitHub
+                                        Repo</a>
+                                </div>
+                            </div>
+
+                            <!-- Dropdown Link Password Generator -->
+                            <div class="dropdown">
+                                <a class="nav-link dropdown-toggle" id="assignmentTwoDropdownLink" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Assignment: Random Password Generator
+                                </a>
+                                <div class="dropdown-menu" id="assignment2Link"
+                                    aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="https://willwoodburn1.github.io/Week3-Homework"
+                                        target="_blank">Deployed
+                                        Version</a>
+                                    <a class="dropdown-item" href="https://github.com/willwoodburn1/Week3-Homework"
+                                        target="_blank">GitHub
+                                        Repo</a>
+                                </div>
+                            </div>
+
+                        </aside>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="leftBottomContainer" class="col box">
+                        <div id="leftBottomContent">
+                            <h3> <strong> <u>Contact Information</strong> </u> </strong> </h3>
+                            <p>
+                                <strong>Name: </strong> William Woodburn <br>
+                                <strong>DOB:</strong> 04/05/2000 <br>
+                                <strong>Email:</strong> woodburn.william1@gmail.com <br>
+                                <strong>Phone:</strong> 0497803106 <br>
+                                ----------------------- <br>
+                                GitHub, Linkedin, Resume provided above
+
+
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="bodyContent box" id="middleContainer">
+                    <div id="imageDisplay">
+                        <div id="carouselAndText">
+                            <div id="middleText">
+                                <h3> <strong> <u> Samples of my Work </u> </strong> </h3>
+                                <p> --------------------------------------------------</p>
+                                <p> To view the physical sites of my greatest projects, please click on the dropdown
+                                    links provided underneath the heading 'Designed Applications.'
+                                    These are a collection of coding activities that I have completed over my short
+                                    career. These are just a sample of the design of these applications, to further
+                                    explore the functionality of the pages, please select the items that appear
+                                    in the dropdown menu. </p>
+                                <p> --------------------------------------------------</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="bodyContent box" id="rightContainer">
+
+
+
+                    <div id="brandStatement">
+                        <h3> <strong> <u> Brand Statement </u> </strong> </h3>
+                        <p>
+                            My goal is to make an immediate impact in the business world and ameliorate my already
+                            profound
+                            knowledge of financials and technology to become an invaluable asset to a highly prestigious
+                            organisation. Despite being relatively new to the professional job market, my resolve and
+                            passion is
+                            undeniable. <br>
+
+                            I began undertaking studies of computer coding in my free time whilst completing a Bachelor
+                            of
+                            Business Degree at Monash University which clearly highlights my desire to succeed through
+                            hard
+                            work
+                            and dedication. I have worked various part time jobs since I was thirteen which has allowed
+                            me
+                            to
+                            develop crucial interpersonal skills that make me suitable for any workplace environment.
+                            <br>
+
+                            I have a strong skill set in mathematics and problem solving coupled with an innate desire
+                            to
+                            learn
+                            from industry professionals. I am incredibly determined to ensure that I make the right
+                            decisions
+                            when entering into a professional position and thus will do whatever it takes to start my
+                            career
+                            on
+                            the right foot.
+
+                        </p>
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark media">
+            <a class="navbar-brand" id="footerText">Personal Porfolio</a>
+        </nav>
+    </footer>
 
 
 
